Added rudimentary structure for the game

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <main>
+        <header>
+            <h1>Tic Tac Toe</h1>
+        </header>
+        <section class="game-board">
+
+        </section>
+    </main>
     
     <script src="scripts/app.js"></script>
 </body>
