added a basic game module

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <header>
             <h1>Tic Tac Toe</h1>
         </header>
-        <section class="game-board">
-
+        <section id="game-board">
+            <button id="a-button">Hello There</button>
         </section>
     </main>
     
