added board structure

--- a/index.html
+++ b/index.html
@@ -12,8 +12,19 @@
             <h1>Tic Tac Toe</h1>
         </header>
         <section id="game-board">
-            <button id="a-button">Hello There</button>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
         </section>
+        <div>
+            <button id="a-button">Hello There</button>
+        </div>
     </main>
     
     <script src="scripts/app.js"></script>
