expanded html structure

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <header>
             <h1>Tic Tac Toe</h1>
         </header>
+        <section class="board-container">
         <section id="game-board">
             <div class="cell" data-cell></div>
             <div class="cell" data-cell></div>
@@ -22,8 +23,9 @@
             <div class="cell" data-cell></div>
             <div class="cell" data-cell></div>
         </section>
+    </section>
         <div>
-            <button id="a-button">Hello There</button>
+            <button id="reset-game">Reset game</button>
         </div>
     </main>
     
