--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <div class="cell" data-cell></div>
         </section>
     </section>
-        <div>
+        <div class="winner-message">
+            <div data-winning-text></div>
             <button id="reset-game">Reset game</button>
         </div>
     </main>
