--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </section>
     </section>
         <div class="winner-message">
-            <div data-winning-text></div>
-            <button id="reset-game">Reset game</button>
+            <div data-winning-text>The winner is: X</div>
+            <button>Reset game</button>
         </div>
     </main>
     
