updated the text of the reset button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </section>
         <div class="winner-message">
             <div data-winning-text>The winner is: X</div>
-            <button>Reset game</button>
+            <button>Reset Game</button>
         </div>
     </main>
     
