now dynamically displaying the winner. X or O

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </section>
     </section>
         <div class="winner-message">
-            <div data-winning-text>The winner is: X</div>
+            <div data-winning-text></div>
             <button>Reset Game</button>
         </div>
     </main>
