connected the reset button, and now populating the div with the winner message

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </section>
         <div class="winner-message">
             <div data-winning-text></div>
-            <button>Reset Game</button>
+            <button onclick="boardModule.resetBoard()">Reset Game</button>
         </div>
     </main>
     
