--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </header>
         <section class="board-container">
         <section id="game-board">
-            <div class="cell" data-cell></div>
+            <div class="cell taken" data-cell>X</div>
             <div class="cell" data-cell></div>
             <div class="cell" data-cell></div>
             <div class="cell" data-cell></div>
