refactored the reset game function

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </section>
         <div class="winner-message">
             <div data-winning-text></div>
-            <button onclick="boardModule.resetBoard()">Reset Game</button>
+            <button onclick="boardModule.resetGame()">Reset Game</button>
         </div>
     </main>
     
