added a back button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             <div class="cell" data-cell></div>
             <div class="cell" data-cell></div>
         </section>
+        
+        <section class="back-button-container">
+            <button>Back</button>
+        </section>
     </section>
         <div class="winner-message">
             <div data-winning-text></div>
