added the foundation for the starting message

--- a/index.html
+++ b/index.html
@@ -27,9 +27,15 @@
             <button>Back</button>
         </section>
     </section>
-        <div class="winner-message">
-            <div data-winning-text></div>
-            <button onclick="boardModule.resetGame()">Reset Game</button>
+    <div class="starting-message">
+
+    </div>
+        <div class="starting-message show">
+            <div class="starting-message-header">Tic Tac Toe</div>
+            <div class="starting-message-play-text">Play versus:</div>
+            <button onclick="boardModule.resetGame()">Player</button>
+            <button onclick="boardModule.resetGame()">Easy computer</button>
+            <button onclick="boardModule.resetGame()">Hard computer</button>
         </div>
     </main>
     
