--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <div class="starting-message-play-text">Play versus:</div>
             <!-- TODO: Add functionality for setting up the players based on their choices here -->
             <button onclick="gameModule.chooseOpponent('human')">Player</button> 
-            <button onclick="gameModule.chooseOpponent('human')">Easy computer</button>
-            <button onclick="gameModule.chooseOpponent('human')">Hard computer</button>
+            <button onclick="gameModule.chooseOpponent('easyComputer')">Easy computer</button>
+            <button onclick="gameModule.chooseOpponent('hardComputer')">Hard computer</button>
         </div>
     </main>
     
