added functionality for the back button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </section>
         
         <section class="back-button-container">
-            <button>Back</button>
+            <button onclick="boardModule.backButton()">Back</button>
         </section>
     </section>
     <div class="winner-message">
