refactored the buttons

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <div class="starting-message show">
             <div class="starting-message-header">Tic Tac Toe</div>
             <div class="starting-message-play-text">Play versus:</div>
-            <button onclick="gameModule.chooseOpponent('human')">Player</button> 
-            <button onclick="gameModule.chooseOpponent('easyComputer')">Easy computer</button>
-            <button onclick="gameModule.chooseOpponent('hardComputer')">Hard computer</button>
+            <button onclick="gameModule.chooseOpponent('human')">Another player</button> 
+            <button onclick="gameModule.chooseOpponent('easyComputer')">Computer</button>
+            <!-- <button onclick="gameModule.chooseOpponent('hardComputer')">Hard computer</button> -->
         </div>
     </main>
     
