styled the buttons

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div class="starting-message show">
             <div class="starting-message-header">Tic Tac Toe</div>
             <div class="starting-message-play-text">Play versus:</div>
-            <button onclick="gameModule.chooseOpponent('human')">Another player</button> 
-            <button onclick="gameModule.chooseOpponent('easyComputer')">Computer</button>
+            <button class="playButtons" onclick="gameModule.chooseOpponent('human')">Another player</button> 
+            <button class="playButtons" onclick="gameModule.chooseOpponent('easyComputer')">Computer</button>
             <!-- <button onclick="gameModule.chooseOpponent('hardComputer')">Hard computer</button> -->
         </div>
     </main>
